--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,75 +8,22 @@
     android:background="@drawable/forestbackground"
     tools:context="corem.eldad.molestrike.MainActivity">
 
-    <ImageView
-        android:layout_height="86dp"
-        app:srcCompat="@drawable/talpa1"
-        tools:layout_editor_absoluteX="245dp"
-        android:id="@+id/bottomMiddleMole"
-        android:layout_width="86dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
-
-    <ImageView
-        android:layout_height="86dp"
-        app:srcCompat="@drawable/talpa1"
-        android:id="@+id/bottomRightMole"
-        android:layout_width="86dp"
+    <ImageButton
+        android:layout_width="74dp"
+        android:layout_height="67dp"
+        app:srcCompat="@android:drawable/ic_media_play"
+        android:id="@+id/imageButton"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        app:layout_constraintLeft_toRightOf="@+id/bottomMiddleMole" />
+        app:layout_constraintVertical_bias="0.060000002"
+        android:onClick="play"/>
 
-    <ImageView
-        android:layout_height="86dp"
-        app:srcCompat="@drawable/talpa1"
-        android:id="@+id/topRightMole"
-        android:layout_width="86dp"
-        app:layout_constraintLeft_toRightOf="@+id/topMiddleMole"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomRightMole" />
-
-    <ImageView
-        android:layout_height="86dp"
-        app:srcCompat="@drawable/talpa1"
-        tools:layout_editor_absoluteX="245dp"
-        android:id="@+id/topMiddleMole"
-        android:layout_width="86dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomMiddleMole"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <ImageView
-        android:layout_width="86dp"
-        android:layout_height="86dp"
-        app:srcCompat="@drawable/talpa1"
-        android:id="@+id/bottomLeftMole"
-        app:layout_constraintRight_toLeftOf="@+id/bottomMiddleMole"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
-
-    <ImageView
-        android:layout_width="86dp"
-        android:layout_height="86dp"
-        app:srcCompat="@drawable/talpa1"
-        android:id="@+id/topLeftMole"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintRight_toLeftOf="@+id/topMiddleMole"
-        app:layout_constraintBottom_toTopOf="@+id/bottomLeftMole"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:layout_constraintHorizontal_bias="0.47" />
 </android.support.constraint.ConstraintLayout>
