--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -17,8 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:contentDescription="bottomMiddle"
-        android:visibility="gone"/>
+        android:contentDescription="bottomMiddle"/>
 
     <ImageView
         android:layout_height="86dp"
@@ -29,8 +28,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/topRightMole"
         android:contentDescription="topMiddle"
-        android:layout_marginTop="120dp"
-        android:visibility="gone"/>
+        android:layout_marginTop="120dp"/>
 
     <ImageView
         android:layout_width="86dp"
@@ -48,8 +46,7 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginLeft="44dp"
         android:layout_marginRight="44dp"
-        app:layout_constraintHorizontal_bias="0.33"
-        android:visibility="gone"/>
+        app:layout_constraintHorizontal_bias="0.33"/>
 
     <ImageView
         android:layout_width="86dp"
@@ -68,8 +65,7 @@
         android:layout_marginLeft="63dp"
         android:layout_marginRight="63dp"
         android:layout_marginTop="120dp"
-        app:layout_constraintHorizontal_bias="0.18"
-        android:visibility="gone"/>
+        app:layout_constraintHorizontal_bias="0.18"/>
 
     <ImageView
         app:srcCompat="@drawable/talpa1"
@@ -80,8 +76,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:contentDescription="topRight"
-        android:layout_marginTop="120dp"
-        android:visibility="gone"/>
+        android:layout_marginTop="120dp"/>
 
     <ImageView
         app:srcCompat="@drawable/talpa1"
@@ -98,7 +93,39 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
-        android:layout_width="86dp"
-        android:visibility="gone"/>
+        android:layout_width="86dp"/>
+
+    <ImageView
+        android:id="@+id/countDownView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/bottomMiddleMole"
+        app:layout_constraintVertical_bias="0.0"
+        android:visibility="visible"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+
+    <TextView
+        android:text="Score: "
+        android:layout_width="143dp"
+        android:layout_height="42dp"
+        android:id="@+id/count"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.03"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.13"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal|bold"
+        android:textSize="36sp"
+        android:textColor="@android:color/holo_red_dark" />
 
 </android.support.constraint.ConstraintLayout>
