--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,11 +9,10 @@
     tools:context="corem.eldad.molestrike.GameActivity">
 
     <ImageView
-        app:srcCompat="@drawable/talpa1"
-        android:id="@+id/bottomMiddleMole"
+        android:id="@+id/MiddleMole"
         android:layout_width="88dp"
         android:layout_height="86dp"
-        app:layout_constraintTop_toBottomOf="@+id/topRightMole"
+        app:layout_constraintTop_toBottomOf="@+id/topMiddleMole"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,24 +20,25 @@
 
     <ImageView
         android:layout_height="86dp"
-        app:srcCompat="@drawable/talpa1"
-        android:id="@+id/topMiddleMole"
+        android:id="@+id/topRightMole"
         android:layout_width="86dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/topRightMole"
+        app:layout_constraintLeft_toRightOf="@+id/topMiddleMole"
         android:contentDescription="topMiddle"
-        android:layout_marginTop="120dp"/>
+        android:layout_marginTop="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:layout_width="86dp"
         android:layout_height="86dp"
-        app:srcCompat="@drawable/talpa1"
         android:id="@+id/bottomLeftMole"
         app:layout_constraintTop_toBottomOf="@+id/topLeftMole"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/bottomMiddleMole"
+        app:layout_constraintRight_toLeftOf="@+id/MiddleMole"
         android:contentDescription="bottomLeft"
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="44dp"
@@ -50,13 +50,12 @@
 
     <ImageView
         android:layout_width="86dp"
-        app:srcCompat="@drawable/talpa1"
         android:id="@+id/topLeftMole"
         android:adjustViewBounds="false"
         android:layout_height="86dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/topRightMole"
+        app:layout_constraintRight_toLeftOf="@+id/topMiddleMole"
         android:contentDescription="topLeft"
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="63dp"
@@ -65,27 +64,31 @@
         android:layout_marginLeft="63dp"
         android:layout_marginRight="63dp"
         android:layout_marginTop="120dp"
-        app:layout_constraintHorizontal_bias="0.18"/>
+        app:layout_constraintHorizontal_bias="0.22"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        app:srcCompat="@drawable/talpa1"
-        android:id="@+id/topRightMole"
+        android:id="@+id/topMiddleMole"
         android:layout_height="86dp"
         android:layout_width="87dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:contentDescription="topRight"
-        android:layout_marginTop="120dp"/>
+        android:layout_marginTop="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        app:srcCompat="@drawable/talpa1"
         android:id="@+id/bottomRightMole"
         android:layout_height="86dp"
-        app:layout_constraintTop_toBottomOf="@+id/topMiddleMole"
+        app:layout_constraintTop_toBottomOf="@+id/topRightMole"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/bottomMiddleMole"
+        app:layout_constraintLeft_toRightOf="@+id/MiddleMole"
         android:contentDescription="bottomRight"
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="2dp"
@@ -100,7 +103,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/bottomMiddleMole"
+        app:layout_constraintBottom_toBottomOf="@+id/MiddleMole"
         app:layout_constraintVertical_bias="0.0"
         android:visibility="visible"
         android:layout_width="100dp"
@@ -108,8 +111,8 @@
 
     <TextView
         android:text="Score: "
-        android:layout_width="143dp"
-        android:layout_height="42dp"
+        android:layout_width="167dp"
+        android:layout_height="wrap_content"
         android:id="@+id/count"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -118,14 +121,36 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintHorizontal_bias="0.09"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.13"
+        app:layout_constraintVertical_bias="0.0"
         android:fontFamily="sans-serif"
         android:textStyle="normal|bold"
         android:textSize="36sp"
-        android:textColor="@android:color/holo_red_dark" />
+        android:textColor="?android:attr/colorPressedHighlight" />
+
+    <TextView
+        android:text="Top:"
+        android:layout_width="107dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/topScore"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal|bold"
+        android:textSize="36sp"
+        android:textColor="?android:attr/colorPressedHighlight"  />
 
 </android.support.constraint.ConstraintLayout>
