--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,7 +16,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:contentDescription="bottomMiddle"/>
+        android:contentDescription="bottomMiddle"
+        app:srcCompat="@drawable/ic_mole1" />
 
     <ImageView
         android:layout_height="86dp"
@@ -29,7 +30,8 @@
         android:layout_marginTop="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_mole1" />
 
     <ImageView
         android:layout_width="86dp"
@@ -46,7 +48,8 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginLeft="44dp"
         android:layout_marginRight="44dp"
-        app:layout_constraintHorizontal_bias="0.33"/>
+        app:layout_constraintHorizontal_bias="0.33"
+        app:srcCompat="@drawable/ic_mole1" />
 
     <ImageView
         android:layout_width="86dp"
@@ -67,7 +70,8 @@
         app:layout_constraintHorizontal_bias="0.22"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_mole1" />
 
     <ImageView
         android:id="@+id/topMiddleMole"
@@ -80,7 +84,8 @@
         android:layout_marginTop="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_mole1" />
 
     <ImageView
         android:id="@+id/bottomRightMole"
@@ -96,7 +101,8 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
-        android:layout_width="86dp"/>
+        android:layout_width="86dp"
+        app:srcCompat="@drawable/ic_mole1" />
 
     <ImageView
         android:id="@+id/countDownView"
