--- a/app/src/main/res/drawable/goingdown.xml
+++ b/app/src/main/res/drawable/goingdown.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="true">
-    <item android:drawable="@drawable/ic_mole5" android:duration="100" />
-    <item android:drawable="@drawable/ic_mole4" android:duration="100" />
-    <item android:drawable="@drawable/ic_mole3" android:duration="100" />
-    <item android:drawable="@drawable/ic_mole2" android:duration="100" />
-    <item android:drawable="@drawable/ic_mole1" android:duration="100" />
+    <item android:drawable="@drawable/mole5" android:duration="20" />
+    <item android:drawable="@drawable/mole4" android:duration="20" />
+    <item android:drawable="@drawable/mole3" android:duration="20" />
+    <item android:drawable="@drawable/mole2" android:duration="20" />
+    <item android:drawable="@drawable/mole1" android:duration="20" />
 </animation-list>
