--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,8 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:contentDescription="bottomMiddle"
-        app:srcCompat="@drawable/ic_mole1" />
+        android:contentDescription="bottomMiddle" />
 
     <ImageView
         android:layout_height="86dp"
@@ -30,8 +29,7 @@
         android:layout_marginTop="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_mole1" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:layout_width="86dp"
@@ -48,8 +46,7 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginLeft="44dp"
         android:layout_marginRight="44dp"
-        app:layout_constraintHorizontal_bias="0.33"
-        app:srcCompat="@drawable/ic_mole1" />
+        app:layout_constraintHorizontal_bias="0.33" />
 
     <ImageView
         android:layout_width="86dp"
@@ -70,8 +67,7 @@
         app:layout_constraintHorizontal_bias="0.22"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_mole1" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/topMiddleMole"
@@ -84,8 +80,7 @@
         android:layout_marginTop="120dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_mole1" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/bottomRightMole"
@@ -101,8 +96,7 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
-        android:layout_width="86dp"
-        app:srcCompat="@drawable/ic_mole1" />
+        android:layout_width="86dp" />
 
     <ImageView
         android:id="@+id/countDownView"
