--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -104,7 +104,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/MiddleMole"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.060000002"
         android:visibility="visible"
         android:layout_width="100dp"
         android:layout_height="100dp" />
@@ -152,5 +152,24 @@
         android:textStyle="normal|bold"
         android:textSize="36sp"
         android:textColor="?android:attr/colorPressedHighlight"  />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="43dp"
+        app:srcCompat="@drawable/ic_pause"
+        android:id="@+id/pause"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintRight_toLeftOf="@+id/topScore"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.98"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/topRightMole"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:onClick="pause"/>
 
 </android.support.constraint.ConstraintLayout>
