--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/PreferenceThemeOverlay"
-    android:background="@color/colorPrimary"
+    android:background="@color/black"
     tools:context="corem.eldad.molestrike.Settings">
-
 
 </android.support.constraint.ConstraintLayout>
