--- a/app/src/main/res/xml/my_preferences.xml
+++ b/app/src/main/res/xml/my_preferences.xml
@@ -2,12 +2,18 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <PreferenceCategory
-        android:title="inline_preferences">
+        android:title="Settings"/>
 
-        <CheckBoxPreference
-            android:key="checkbox_preference"
-            android:title="title_checkbox_preference"
-            android:summary="summary_checkbox_preference" />
+        <EditTextPreference
+            android:capitalize="words"
+            android:defaultValue="Player1"
+            android:inputType="textCapWords"
+            android:key="display_name"
+            android:maxLines="1"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="Your Name" />
+
         <SwitchPreference
             android:key="music"
             android:title="music"
@@ -15,64 +21,19 @@
             android:textOn="Music ON"
             android:defaultValue="true" />
 
-    </PreferenceCategory>
+        <SwitchPreference
+            android:key="soundFX"
+            android:title="soundFX"
+            android:textOff="Sound OFF"
+            android:textOn="Sound ON"
+            android:defaultValue="true" />
 
-    <PreferenceCategory
-        android:title="/dialog_based_preferences">
+        <ListPreference
+            android:defaultValue="forestbackground"
+            android:title="@string/themes"
+            android:entries="@array/themes_array_titles"
+            android:entryValues="@array/themes_array_values"
+            android:key="themes" />
 
-        <EditTextPreference
-            android:key="edittext_preference"
-            android:title="/title_edittext_preference"
-            android:summary="summary_edittext_preference"
-            android:dialogTitle="dialog_title_edittext_preference" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:title="launch_preferences">
-
-        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
-            in word processing). Like for other preference types, we assign a key
-            here so it is able to save and restore its instance state. -->
-        <PreferenceScreen
-            android:key="screen_preference"
-            android:title="title_screen_preference"
-            android:summary="summary_screen_preference">
-
-            <CheckBoxPreference
-                android:key="next_screen_checkbox_preference"
-                android:title="title_next_screen_toggle_preference"
-                android:summary="summary_next_screen_toggle_preference" />
-
-        </PreferenceScreen>
-
-        <PreferenceScreen
-            android:title="title_intent_preference"
-            android:summary="summary_intent_preference">
-
-            <intent android:action="android.intent.action.VIEW"
-                android:data="http://www.android.com" />
-
-        </PreferenceScreen>
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:title="preference_attributes">
-
-        <CheckBoxPreference
-            android:key="parent_checkbox_preference"
-            android:title="title_parent_preference"
-            android:summary="summary_parent_preference" />
-
-        <!-- The visual style of a child is defined by this styled theme attribute. -->
-        <CheckBoxPreference
-            android:key="child_checkbox_preference"
-            android:dependency="parent_checkbox_preference"
-            android:layout="?android:attr/preferenceLayoutChild"
-            android:title="title_child_preference"
-            android:summary="summary_child_preference" />
-
-    </PreferenceCategory>
 
 </PreferenceScreen>
