--- a/app/src/main/res/layout/activity_game_medium.xml
+++ b/app/src/main/res/layout/activity_game_medium.xml
@@ -5,8 +5,7 @@
     android:id="@+id/activity_game_medium"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/forestbackground">
-    <!--tools:context="corem.eldad.molestrike.GameActivity"-->
+    tools:context="corem.eldad.molestrike.GameActivity">
 
     <ImageView
         android:id="@+id/MiddleMole"
@@ -77,7 +76,7 @@
         android:layout_marginRight="44dp"
         app:layout_constraintHorizontal_bias="0.19"
         android:layout_height="75dp"
-        app:layout_constraintVertical_bias="0.71"
+        app:layout_constraintVertical_bias="0.71000004"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -184,8 +183,8 @@
 
     <TextView
         android:text="Top:"
-        android:layout_width="116dp"
-        android:layout_height="42dp"
+        android:layout_width="107dp"
+        android:layout_height="wrap_content"
         android:id="@+id/topScore"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -203,5 +202,24 @@
         android:textStyle="normal|bold"
         android:textSize="36sp"
         android:textColor="?android:attr/colorPressedHighlight"  />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="43dp"
+        android:id="@+id/pause"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintRight_toLeftOf="@+id/topScore"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.98"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/topRightMole"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:onClick="pause"
+        android:background="@drawable/pause"/>
 
 </android.support.constraint.ConstraintLayout>
