--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,25 +5,22 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/forestbackground"
     tools:context="corem.eldad.molestrike.MainActivity">
 
     <ImageButton
         android:layout_width="115dp"
         android:layout_height="91dp"
         android:id="@+id/imageButton"
-        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:onClick="play"
-        android:background="@drawable/play"/>
+        android:onClick="chooseLevel"
+        android:background="@drawable/play"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <Button
         android:layout_width="wrap_content"
@@ -43,5 +40,68 @@
         app:layout_constraintVertical_bias="0.0"
         android:onClick="settingsMenu"
         android:background="@drawable/ic_settings" />
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="0dp"
+        android:id="@+id/level"
+        android:visibility="gone"
+        android:layout_height="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+        <RadioButton
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:checked="true"
+            app:layout_constraintRight_toLeftOf="@+id/medium"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/easy"
+            android:button="@drawable/empty"
+            android:background="@drawable/easy"
+            android:onClick="play"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <RadioButton
+            android:id="@+id/hard"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:text="Hard"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/medium"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:button="@drawable/empty"
+            android:enabled="false"
+            android:background="@drawable/harddisabled"/>
+
+        <RadioButton
+            android:id="@+id/medium"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/mediumdisabled"
+            android:enabled="false"
+            android:button="@drawable/empty"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="16dp"
+            android:onClick="play"/>
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
