Angel & Devil mechanism + Leaderboard + Crashlytics

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -101,18 +101,16 @@
     <ImageView
         android:id="@+id/countDownView"
         android:visibility="visible"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="179dp"
+        android:layout_height="170dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/topMiddleMole"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/MiddleMole"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -127,8 +125,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
-        android:layout_marginTop="16dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         app:layout_constraintVertical_bias="0.0"
@@ -148,11 +145,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="16dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.16000003"
         android:fontFamily="sans-serif"
         android:textStyle="normal|bold"
         android:textSize="36sp"
@@ -166,16 +162,28 @@
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/topRightMole"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.0"
         android:onClick="pause"
         android:background="@drawable/pause"
-        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
+        app:layout_constraintHorizontal_bias="1.0" />
+
+    <ImageView
+        android:layout_width="219dp"
+        android:layout_height="128dp"
+        app:srcCompat="@drawable/ic_heart_full"
+        android:id="@+id/life"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/topScore"
+        android:layout_marginLeft="8dp"
         app:layout_constraintHorizontal_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
