--- a/app/src/main/res/layout/activity_game_medium.xml
+++ b/app/src/main/res/layout/activity_game_medium.xml
@@ -171,8 +171,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
-        android:layout_marginTop="16dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         app:layout_constraintVertical_bias="0.0"
@@ -183,43 +182,54 @@
 
     <TextView
         android:text="Top:"
-        android:layout_width="107dp"
-        android:layout_height="wrap_content"
+        android:layout_width="151dp"
+        android:layout_height="50dp"
         android:id="@+id/topScore"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="16dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.16000003"
         android:fontFamily="sans-serif"
         android:textStyle="normal|bold"
         android:textSize="36sp"
-        android:textColor="?android:attr/colorPressedHighlight"  />
+        android:textColor="?android:attr/colorPressedHighlight"
+        app:layout_constraintRight_toLeftOf="@+id/pause" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="43dp"
+        android:layout_width="40dp"
+        android:layout_height="39dp"
         android:id="@+id/pause"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        app:layout_constraintRight_toLeftOf="@+id/topScore"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.98"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/topRightMole"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.0"
         android:onClick="pause"
-        android:background="@drawable/pause"/>
+        android:background="@drawable/pause"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="1.0" />
+
+    <ImageView
+        android:layout_width="219dp"
+        android:layout_height="128dp"
+        app:srcCompat="@drawable/ic_heart_full"
+        android:id="@+id/life"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/topScore"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
