--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -25,6 +25,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
+        android:visibility="gone"
         android:layout_width="562dp"
         android:layout_height="81dp"
         app:srcCompat="@drawable/highscore"
@@ -38,11 +39,12 @@
         android:layout_marginRight="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.19" />
 
     <ImageView
-        android:layout_width="569dp"
-        android:layout_height="62dp"
+        android:visibility="gone"
+        android:layout_width="580dp"
+        android:layout_height="82dp"
         app:srcCompat="@drawable/newlevel"
         android:id="@+id/newLevel"
         android:layout_marginTop="8dp"
@@ -54,22 +56,6 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginLeft="16dp" />
 
-    <ImageButton
-        android:layout_width="181dp"
-        android:layout_height="71dp"
-        app:srcCompat="@drawable/playagain"
-        android:id="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/newLevel"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:background="@drawable/empty"
-        app:layout_constraintVertical_bias="1.0"
-        android:onClick="chooseLevel"/>
 </android.support.constraint.ConstraintLayout>
