--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,14 +49,14 @@
         android:onClick="themesDialog"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/play"
-        android:layout_marginBottom="48dp"
-        app:layout_constraintVertical_bias="0.13"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageButton
@@ -75,5 +75,56 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:onClick="about"/>
+
+    <TextView
+        android:text="Top:"
+        android:layout_width="151dp"
+        android:layout_height="50dp"
+        android:id="@+id/topScore"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal|bold"
+        android:textSize="36sp"
+        android:textColor="?android:attr/colorPressedHighlight"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/themes"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.61"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ListView
+        app:layout_constraintRight_toLeftOf="@+id/play"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:id="@+id/list"
+        app:layout_constraintBottom_toTopOf="@+id/about"
+        android:layout_height="0dp"
+        android:background="@drawable/curve_shape"
+        android:layout_width="0dp"
+        android:padding="3dp"
+        android:smoothScrollbar="true"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.0"
+        android:visibility="gone"/>
+
+    <Button
+        android:text="Show Scoreboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        app:layout_constraintRight_toLeftOf="@+id/themes"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/topScore"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:background="@drawable/curve_shape"
+        android:onClick="showscoreboard"/>
 
 </android.support.constraint.ConstraintLayout>
