--- a/app/src/main/res/layout/activity_game_medium.xml
+++ b/app/src/main/res/layout/activity_game_medium.xml
@@ -9,155 +9,147 @@
 
     <ImageView
         android:id="@+id/MiddleMole"
-        android:layout_width="75dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:contentDescription="bottomMiddle"
-        android:layout_height="75dp"
-        app:layout_constraintVertical_bias="0.71"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="86dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomMiddleMole"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.37"
+        android:layout_width="86dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp" />
 
     <ImageView
         android:id="@+id/rightMiddleMole"
-        android:layout_width="75dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:contentDescription="bottomMiddle"
-        android:layout_height="75dp"
-        app:layout_constraintVertical_bias="0.75"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/MiddleMole"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_width="86dp"
+        android:layout_height="86dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomRightMole"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="@+id/life"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintHorizontal_bias="0.92" />
 
     <ImageView
         android:id="@+id/bottomMiddleMole"
-        android:layout_width="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:contentDescription="bottomMiddle"
-        android:layout_height="75dp"
-        app:layout_constraintVertical_bias="1.0"
-        app:layout_constraintTop_toBottomOf="@+id/MiddleMole" />
-
-    <ImageView
-        android:layout_height="75dp"
-        android:id="@+id/topRightMole"
-        android:layout_width="75dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:contentDescription="topMiddle"
-        android:layout_marginTop="136dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/topMiddleMole"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintBottom_toTopOf="@+id/rightMiddleMole" />
-
-    <ImageView
-        android:layout_width="75dp"
-        android:id="@+id/leftMiddleMole"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/MiddleMole"
-        android:contentDescription="bottomLeft"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="44dp"
-        android:layout_marginEnd="44dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginLeft="44dp"
-        android:layout_marginRight="44dp"
-        app:layout_constraintHorizontal_bias="0.19"
-        android:layout_height="75dp"
-        app:layout_constraintVertical_bias="0.71000004"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="75dp"
-        android:id="@+id/bottomLeftMole"
-        app:layout_constraintTop_toBottomOf="@+id/leftMiddleMole"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/MiddleMole"
-        android:contentDescription="bottomLeft"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="44dp"
-        android:layout_marginEnd="44dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginLeft="44dp"
-        android:layout_marginRight="44dp"
-        app:layout_constraintHorizontal_bias="0.2"
-        android:layout_height="75dp"
+        android:layout_width="86dp"
+        android:layout_height="86dp"
+        app:layout_constraintHorizontal_bias="0.36"
+        app:layout_constraintTop_toTopOf="@+id/countDownView"
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:layout_width="75dp"
-        android:id="@+id/topLeftMole"
-        android:adjustViewBounds="false"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:contentDescription="topLeft"
-        android:layout_marginStart="63dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginLeft="63dp"
-        android:layout_marginTop="136dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_height="75dp"
+        android:id="@+id/topRightMole"
+        android:contentDescription="topMiddle"
+        android:layout_width="86dp"
+        android:layout_height="86dp"
+        app:layout_constraintTop_toTopOf="@+id/life"
+        app:layout_constraintBottom_toTopOf="@+id/topMiddleMole"
         android:layout_marginBottom="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/topMiddleMole"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintBottom_toTopOf="@+id/leftMiddleMole" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintRight_toLeftOf="@+id/rightMiddleMole"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/bottomLeftMole"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/MiddleMole"
+        android:contentDescription="bottomLeft"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="44dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="44dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toTopOf="@+id/count"
+        android:layout_width="86dp"
+        android:layout_height="86dp" />
+
+    <ImageView
+        android:id="@+id/topLeftMole"
+        android:adjustViewBounds="false"
+        android:contentDescription="topLeft"
+        android:layout_width="86dp"
+        android:layout_height="86dp"
+        android:layout_marginStart="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="50dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottomLeftMole"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/topMiddleMole"
-        android:layout_height="75dp"
-        android:layout_width="75dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:contentDescription="topRight"
-        android:layout_marginTop="136dp"
-        app:layout_constraintBottom_toTopOf="@+id/MiddleMole"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginTop="248dp"
+        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintRight_toLeftOf="@+id/bottomRightMole"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="86dp"
+        android:layout_height="86dp"
+        app:layout_constraintVertical_bias="0.99" />
 
     <ImageView
         android:id="@+id/bottomRightMole"
         android:contentDescription="bottomRight"
-        android:layout_width="75dp"
+        android:layout_width="86dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/bottomMiddleMole"
-        android:layout_marginLeft="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/rightMiddleMole"
-        app:layout_constraintHorizontal_bias="0.66"
         app:layout_constraintVertical_bias="1.0"
-        android:layout_height="75dp" />
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintHorizontal_bias="0.92"
+        app:layout_constraintTop_toTopOf="@+id/life"
+        android:layout_height="86dp" />
 
     <ImageView
         android:id="@+id/countDownView"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/MiddleMole"
-        app:layout_constraintVertical_bias="0.0"
         android:visibility="visible"
         android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.05"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp" />
 
     <TextView
         android:text="Score: "
@@ -212,7 +204,7 @@
         app:layout_constraintBottom_toTopOf="@+id/topRightMole"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.0"
-        android:onClick="pause"
+        android:onClick="Pause"
         android:background="@drawable/pause"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="1.0" />
@@ -222,14 +214,14 @@
         android:layout_height="128dp"
         app:srcCompat="@drawable/ic_heart_full"
         android:id="@+id/life"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/topScore"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
         app:layout_constraintHorizontal_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
